correct portfolio header spacing

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -488,6 +488,10 @@ svg{
   -o-background-size: cover;
 }
 
+#portfolioTitle{
+  margin-top: 20px;
+}
+
 .projects{
   margin-top: 30px;
 }
